<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="accountviewmodel"
            type="com.example.ibeor.viewmodels.AccountRecoveryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.fragments.AccountRecoeryFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:onClick="@{accountviewmodel::backprees}"
            android:src="@drawable/back_btn"
            app:layout_constraintBottom_toTopOf="@+id/recover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100" />

        <TextView
            android:id="@+id/recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="276dp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/account_recovery"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/demo_tv"
            app:layout_constraintStart_toStartOf="@+id/demo_tv"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/demo_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_26sdp"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:text="@string/changed_your_phone_number_n_we_can_help_you_login_with_your_email_address"
            app:layout_constraintBottom_toTopOf="@+id/btnSign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recover"
            app:layout_constraintVertical_bias="0.382" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_26sdp"
            android:layout_marginBottom="268dp"
            android:background="@drawable/purple_back"
            android:onClick="@{accountviewmodel::signInWithemail}"
            android:padding="@dimen/_5sdp"
            android:text="@string/sign_in_withemail"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/demo_tv"
            app:layout_constraintStart_toStartOf="@+id/demo_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>