<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myphonenoviewmodel"
            type="com.example.ibeor.viewmodels.MyPhoneNumberViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MyPhoneNumberFragment">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:onClick="@{myphonenoviewmodel::backprees}"
            android:src="@drawable/back_btn"
            android:text="@string/allow_location"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/my_phone_number_is"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/demo_tv"
            app:layout_constraintEnd_toEndOf="@+id/demo_tv"
            app:layout_constraintStart_toStartOf="@+id/demo_tv"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/ln"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/textfield_back"
            android:gravity="left"
            android:hint="@string/email_address"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingRight="@dimen/_16sdp"
            android:src="@drawable/flag"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/country_Code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/flag"
                android:drawableEnd="@drawable/path"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/_1"
                android:text="@={myphonenoviewmodel.phone_Code}"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:src="@drawable/verticalview" />

            <EditText
                android:id="@+id/phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="@color/white"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="@string/_331_623_8413"
                android:inputType="number"
                android:text="@={myphonenoviewmodel.phoneNumber}"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:text="Message and data rates may apply."
            app:layout_constraintBottom_toTopOf="@+id/btnSign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/btnSign_in"
            app:layout_constraintTop_toBottomOf="@+id/ln" />

        <TextView
            android:id="@+id/demo_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/we_protect_our_community_by_making_sure_everyone_on_ibeor_is_real_we_will_never_share_your_phone_number_with_anyone"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/recover" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:padding="@dimen/_3sdp"
            android:text="@string/phone_number"
            app:layout_constraintBottom_toTopOf="@+id/ln"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/ln"
            app:layout_constraintTop_toBottomOf="@+id/demo_tv" />


        <androidx.cardview.widget.CardView
            android:id="@+id/btn_conti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_26sdp"
            android:layout_marginTop="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_26sdp"
            android:shadowColor="@color/light_black"
            app:cardCornerRadius="@dimen/_23sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="0dp">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:background="@drawable/purple_back"
                android:onClick="@{myphonenoviewmodel::continu}"
                android:padding="@dimen/_5sdp"
                android:text="Continue "
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_26sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_26sdp"
            android:shadowColor="@color/light_black"
            app:cardCornerRadius="@dimen/_23sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_conti">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:background="@drawable/gray_back"
                android:onClick="@{myphonenoviewmodel::cancel}"
                android:padding="@dimen/_5sdp"
                android:text="Cancel "
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>